[project]
name = "feap"
version = "0.0.0"
authors = [
  {name="Claudio M. Perez"}
  # <50180406+claudioperez@users.noreply.github.com>"
]

license = {file = "LICENSE"}

readme = "README.md"

description = "."

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only"
]

keywords = [
] 

dependencies = [
]

[project.optional-dependencies]
testing = [
]

docs = [
]

[project.urls]
Repository = "http://github.com/sanjayg0/feappv"

[build-system]
requires = [
    "amoeba-build >= 0.0.9",
    "setuptools >= 52.0.2",
]

build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["python"]


[tool.cibuildwheel]
skip = ["pp*", "*musllinux*", "cp36*", "*i686*", "UNKNOWN*"] #, "cp38*", "cp37*"] # , "cp39*", "cp311*"]
#manylinux-x86_64-image = "manylinux_2_28"
manylinux-x86_64-image="manylinux2014"
# manylinux-x86_64-image="manylinux_2_24"

# [tool.cibuildwheel.windows]
# before-build="pip install delvewheel"
# repair-wheel-command="delvewheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.linux]
# before-all = "yum install -y tcl-devel mysql-devel lapack-devel"
before-all = "yum install -y tcl-devel mysql-devel openblas-devel"
#before-all = "yum-config-manager --add-repo https://yum.repos.intel.com/setup/intelproducts.repo && yum install intel-mkl-2020.0-088"
# before-all = "rpm --import https://yum.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS-2019.PUB && yum install intel-mkl"
repair-wheel-command = "auditwheel repair --exclude libOpenSeesRT.so  -w {dest_dir} {wheel}"

