add_library(FEAP_Program OBJECT)
target_sources(FEAP_Program
    PRIVATE
        acheck.f
        acosd.f
        addext.f
        arcint1.f
        arclen.f
        asind.f
        atand.f
        autbac.f
        bjac2d.f
        bjac3d.f
        blkgen.f
        blktem.f
        caprod.f
        cashift.f
        cassem.f
        cfunc.f
        chkblk.f
        chlbac.f
        chlfwd.f
        ckbrk8.f
        ckinon0.f
        ckisop.f
        ckno0i.f
        cknon0.f
        cksep.f
        cktets.f
        cktris.f
        colbac.f
        colred.f
        comelmeq.f
        comelm.f
        comproa.f
        comprob.f
        comprol.f
        conjgd.f
        cosd.f
        cvtc2i.f
        dasble.f
        dasol.f
        datest.f
        datric.f
        datri.f
        dcheck.f
        dfind.f
        dicont.f
        dot.f
        dotid.f
        dotx.f
        dparam.f
        dsetci.f
        dsred.f
        dured.f
        dyna01.f
        dyna02.f
        dyna03.f
        dyna04.f
        eisql.f
        elcnt.f
        elcntl.f
        elmlib.f
        elpint1.f
        endclr.f
        errclr.f
        evalex.f
        filargs.f
        filnam.f
        formfe.f
        formhh.f
        front.f
        gamma1.f
        geig.f
        genclr.f
        genint.f
        genvec.f
        global.f
        histex.f
        hsizend.f
        int1d.f
        int1dg.f
        int1dl.f
        int1dn.f
        int2d.f
        int2dn.f
        int3d.f
        interp1.f
        invert.f
        inza.f
        ipos.f
        iprint.f
        iterat.f
        iters.f
        just.f
        meshck.f
        mkface.f
        modify.f
        mpi_start_feap.f
        mprint.f
        nbuck.f
        newlnum.f
        nodel.f
        nodew.f
        nodlnum.f
        numass.f
        nwprof.f
        opnfil.f
        opnum.f
        optibc.f
        optid.f
        outary.f
        paboun.f
        padd.f
        paddv.f
        palloc.f
        pangl.f
        parexp.f
        parstop.f
        passble.f
        pblend1.f
        pblend2.f
        pblend3.f
        pblend.f
        pblendm.f
        pblendx.f
        pblktyp.f
        pbouin.f
        pcboun.f
        pcdisp.f
        pcharr.f
        pcheck.f
        pcomp.f
        pconst.f
        pcontr.f
        pcprop.f
        pdegree.f
        pdelfl.f
        pdetf.f
        pdiff.f
        pedges.f
        pedgin.f
        peforc.f
        peige.f
        peigsv.f
        pelabl.f
        pelcon.f
        pelconl.f
        pelmin.f
        pelnum.f
        peltyp.f
        pendprob.f
        periodbc.f
        pesurf.f
        pexpd.f
        pextnd.f
        pfboun.f
        pform.f
        pfuncs.f
        pgetd.f
        phelp.f
        phillmandel.f
        phist.f
        phsize.f
        piacel.f
        piden.f
        pincld.f
        pinitl.f
        pinpfl.f
        pinput.f
        pinstall.f
        pinval.f
        plbou.f
        plinka.f
        plink.f
        ploa1.f
        pload0.f
        ploadc.f
        pload.f
        plocal.f
        ploopin.f
        ploops.f
        pltmv.f
        pmacio.f
        pmacr1.f
        pmacr2.f
        pmacr3.f
        pmacr4.f
        pmacr5.f
        pmacr6.f
        pmacr7.f
        pmacr8.f
        pmacr9.f
        pmacr.f
        pman.f
        pmatin.f
        pmesh.f
        pmovec.f
        pmove.f
        pnewprob.f
        pnodes.f
        pnorml.f
        pnumbl.f
        pnums.f
        polar.f
        poutie.f
        pperdis.f
        pprint.f
        pprojp.f
        pprojpp.f
        pprtd.f
        presol.f
        prj2dl.f
        prj3dl.f
        proced.f
        profil.f
        prop2.f
        prop2i.f
        prop2p.f
        propld.f
        prtdis.f
        prtitl.f
        prtrea.f
        prtstr.f
        pseqn.f
        psets.f
        psetvol.f
        pside1.f
        psides.f
        psolve.f
        pstr2d.f
        pstr3d.f
        pstrip.f
        psub.f
        ptang.f
        ptiend.f
        ptimpl.f
        ptmplt.f
        ptrans.f
        pupdate.f
        pzero.f
        pzeroi.f
        reader.f
        readfl.f
        reshis.f
        restrt.f
        rstprf.f
        savefl.f
        sblke.f
        sblkn.f
        scalev.f
        segint1.f
        seproj.f
        serchl.f
        seteq.f
        setext.f
        sethis.f
        setlagm.f
        setmac.f
        setmem.f
        setndl.f
        setparam.f
        setpcd.f
        setval.f
        shap1d.f
        shap2.f
        shapef.f
        shp1d.f
        shp1dh.f
        shp1dn.f
        shp2d.f
        shp3d.f
        shptri.f
        sind.f
        sproja.f
        sprojb.f
        stime.f
        store.f
        subsp.f
        tand.f
        tau2sig.f
        tblk.f
        tetshp.f
        tiefor.f
        tienod.f
        tinput.f
        tint2d.f
        tint2dn.f
        tint3d.f
        tjac3d.f
        umaclib.f
        umshlib.f
        upang.f
        uplagm.f
        usetlib.f
        usetmem.f
        vblke.f
        vblkn.f
        vinput.f
        wprojm.f
        writer.f
)

